--- a/style.css
+++ b/style.css
@@ -93,12 +93,12 @@ table {
   width: 100%;
   border-collapse: collapse;
   border: 1px solid rgb(200, 200, 200);
-  letter-spacing: 1px;
   font-size: 0.8rem;
+  text-align: left;
 }
 
 td, th {
-  border: 1px solid rgb(200, 200, 200);
+  border: 1px solid rgb(65, 50, 50);
   padding : 10px 20px;
 }
 
@@ -107,11 +107,11 @@ th {
 }
 
 td {
-  text-align: center;
+  text-align: left;
 }
 
 tr:nth-child(even) td {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(219, 195, 195);
 }
 
 tr:nth-child(odd) td {
